--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "express-session": "^1.18.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.6.2"
+    "mongoose": "^8.6.2",
+    "multer": "^1.4.5-lts.1",
+    "music-metadata": "^7.13.4"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.11"
